Change /login response schema to application/json
