# src/main/java/ProjektBus/Server/utils/ApplicationResponse.java
@@ -1,0 +1,11 @@
+package ProjektBus.Server.utils;
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+
+@AllArgsConstructor
+@Getter
+public class ApplicationResponse {
+
+    private String response;
+}
